[package]
name = "immt-shtml"
version = "0.0.1"
edition = "2021"

[lints]
workspace = true

[dependencies]
immt-api = { workspace=true }
immt-utils = { workspace=true }

const_format = "0.2"
lazy_static = "1"
kuchikiki = "0.8.2"
html5ever = "0.26.0" # needs to match kuchikiki precisely, for some reason
tendril = "0"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
bincode = { version="2.0.0-rc.3",features = ["derive","serde"] }