[package]
name = "immt-stex"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
RusTeX = {path= "../../RusTeXNew/rustex",features = ["multithreaded"]}
tex_engine = {path= "../../RusTeXNew/tex_engine",features = ["multithreaded"]}

immt-api = { path="../api" }
immt-shtml = { path="../shtml" }

tracing = "0.1"
chrono = "0.4"
parking_lot = "0.12"
rayon = "1.10"
paste = "1"
tokio = { version="1.38",features = ["full"] }