[package]
name = "immt-stex"
version = "0.0.1"
edition = "2021"

[lints]
workspace = true

[dependencies]
RusTeX = {git = "https://github.com/Jazzpirate/RusTeX",features = ["multithreaded"]}#{path= "../../RusTeXNew/rustex",features = ["multithreaded"]}
tex_engine = {git = "https://github.com/Jazzpirate/RusTeX",features = ["multithreaded"]}#{path= "../../RusTeXNew/tex_engine",features = ["multithreaded"]}

immt-api = { workspace=true }
immt-shtml = { workspace=true }

tracing = "0.1"
chrono = "0.4"
parking_lot = "0.12"
rayon = "1.10"
paste = "1"
tokio = { version="1.38",features = ["full"] }