[package]
name = "immt-stex"
version = "0.0.1"
edition = "2021"

[lints]
workspace = true

[dependencies]
RusTeX = {workspace=true}
tex_engine = {workspace=true}

immt-api = { workspace=true }
immt-shtml = { workspace=true }

tracing = "0.1"
chrono = "0.4"
parking_lot = "0.12"
rayon = "1"
paste = "1"
tokio = { version="1",features = ["full"] }