[package]
name = "immt-ui"
version = "0.0.1"
authors = ["Dennis Müller <d.mueller@kwarc.info>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """

"""
edition = "2021"

[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"


[dev-dependencies]

[dependencies]
immt-api = {path = "../api",features=["bincode","fs","pariter","tokio"]}
immt-system = {path = "../system"}
either = "1.10"
tracing = "0.1.40"
#tracing-core = "0.1"
tracing-subscriber = { version="0.3",features = ["smallvec","parking_lot"] }
ratatui = { version = "0.26", features = ["crossterm","all-widgets","unstable-widget-ref"] }
crossterm = "0.27"
const-str = "0.5.6"
paste = "1.0.14"
#tui-logger = { version="0.11",features = ["tracing-support"]}
parking_lot = "0.12"
tui-scrollview = "0.3"
chrono = "0.4"
#tui-tree-widget = "0.17"

oxrdf = "0.2.0-alpha.2"

pretty-bytes = "0.2.2"

immt-stex = {path = "../stex"}
log = "0.4.20"