[package]
name = "immt-utils"
version = "0.0.1"
edition = "2021"

[features]
serde = ["dep:serde"]

[dependencies]
triomphe = {workspace=true}
parking_lot = {workspace=true}
serde = {workspace=true,optional=true}
rustc-hash = {workspace=true}
chrono = {workspace=true}
smallvec={workspace=true}

[lints]
workspace = true
