
[package]
name = "flams-database"
version = "0.0.1"
edition = "2024"

[lints]
workspace = true

[features]
backend = [
    "dep:argon2",
    "dep:axum-login",
    #"dep:leptos_axum",
    "dep:flams-system",
    "dep:flams-git",
    "dep:sqlx",
    "dep:password-hash",
    "dep:tokio",
    "dep:async-trait",
]

[dependencies]
serde = { workspace = true }
strum = { workspace = true }

flams-utils = { workspace = true }
flams-system = { workspace = true, optional = true }
flams-git = { workspace = true, optional = true, features = ["gitlab"] }
argon2 = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
password-hash = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
axum-login = { workspace = true, optional = true }
