[package]
name = "flams-ffi"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
flams-system = {workspace=true}
flams-lsp = {workspace=true}
flams-utils = {workspace=true,features=["serde"]}
flams-ontology = {workspace=true,features = ["serde"]}
flams-stex = {workspace=true, features = ["serde"]}

tracing-subscriber = {workspace=true}
color-eyre = {workspace=true}
tracing = {workspace=true}
tokio = {workspace=true,features = ["full","rt","rt-multi-thread"]}
serde = {workspace=true}
serde_json = {workspace = true}
libc = "0.2.170"


[lints]
workspace = true
