[package]
name = "immt-git"
version = "0.0.1"
edition = "2021"

[features]
gitlab = ["dep:gitlab","dep:tokio","dep:parking_lot","dep:serde"] #["dep:reqwest"]

[dev-dependencies]
#tracing-subscriber = {workspace=true}

[dependencies]
#immt-system = {workspace=true,features=["tokio"]}
#immt-utils = {workspace=true, features=["rayon","async","serde"]}
#immt-ontology = {workspace=true, features = ["rdf","serde"]}

tokio = {workspace=true, optional=true}#,features=["rt","io-util","sync","fs"],optional=true}
serde = {workspace=true, optional=true}
#reqwest = {workspace=true, optional=true}
gitlab = {workspace = true,optional = true}
parking_lot = {workspace = true,optional=true}
tracing = {workspace = true}

[lints]
workspace = true
