[package]
name = "immt-lsp"
version = "0.0.1"
edition = "2021"

[lints]
workspace = true

[features]
ws = ["dep:axum","dep:serde_json"]

[dependencies]
immt-system = {workspace=true,features=["tokio"]}
immt-shtml = {workspace=true}
immt-ontology = {workspace=true}
immt-utils = {workspace = true}
tracing={workspace=true}
async-lsp = {workspace=true}
futures = {workspace=true}
tower = {workspace = true}
tokio = {workspace=true}
triomphe = {workspace=true}
parking_lot = {workspace=true}
serde = {workspace=true}

axum = {workspace=true,optional=true}
serde_json = {workspace=true,optional=true}
lazy_static = {workspace=true}
smallvec = {workspace = true}

immt-stex = {workspace = true}