[package]
name = "flams-lsp"
version = "0.0.1"
edition = "2021"

[lints]
workspace = true

[features]
ws = ["dep:axum","dep:serde_json"]

[dependencies]
flams-system = {workspace=true,features=["tokio","zip"]}
flams-ftml = {workspace=true}
flams-ontology = {workspace=true}
flams-utils = {workspace = true}
flams-stex = {workspace = true}

tracing={workspace=true}
async-lsp = {workspace=true}
futures = {workspace=true}
tower = {workspace = true}
tokio = {workspace=true}
triomphe = {workspace=true}
parking_lot = {workspace=true}
serde = {workspace=true}

axum = {workspace=true,optional=true}
serde_json = {workspace=true,optional=true}
lazy_static = {workspace=true}
smallvec = {workspace = true}