[package]
name = "flams-stex"
version = "0.0.1"
edition = "2021"

[dev-dependencies]
tracing-subscriber = { workspace = true }
rstest = { workspace = true }

[dependencies]
flams-ftml = { workspace = true }
flams-ontology = { workspace = true, features = ["serde"] }
flams-system = { workspace = true }
flams-utils = { workspace = true, features = ["serde"] }

rustex_lib = { workspace = true }
tex_engine = { workspace = true }

chrono = { workspace = true }
tracing = { workspace = true, features = ["log"] }
parking_lot = { workspace = true }
paste = { workspace = true }
either = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
smallvec = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
