[package]
name = "flams-system"
version = "0.0.1"
edition = "2021"

[features]
tokio = ["dep:tokio", "flams-utils/tokio", "flams-ontology/tokio"]
gitlab = ["flams-git/gitlab", "tokio"]

[dev-dependencies]
tracing-subscriber = { workspace = true }

[dependencies]
flams-utils = { workspace = true, features = ["rayon", "async", "serde"] }
flams-ontology = { workspace = true, features = ["rdf", "serde"] }
flams-git = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-error = { workspace = true }
tempfile = { workspace = true }

rayon = { workspace = true }
spliter = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
either = { workspace = true }
parking_lot = { workspace = true }
smallvec = { workspace = true }
const_format = { workspace = true }
lazy_static = { workspace = true }
simple-home-dir = { workspace = true }
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "sync",
    "fs",
    "macros",
], optional = true }
chrono = { workspace = true }
serde_json = { workspace = true }

oxigraph = { workspace = true }
spargebra = { workspace = true, features = ["rdf-star"] }
sparesults = { workspace = true, features = ["rdf-star"] }
oxrdfio = { workspace = true }

serde = { workspace = true }
bincode = { workspace = true }

[lints]
workspace = true
