[package]
name = "immt-graphs"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[features]
client = [
    "dep:eframe",
    "dep:log",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "getrandom/js",
    "eframe/accesskit",
    "eframe/default_fonts",
    "eframe/glow",
    "dep:egui",
    "dep:reqwasm",
    "dep:serde_json",
]
ui = ["dep:eframe", "dep:egui"]

[dependencies]
getrandom = "0.2"
egui_graphs = "0.20"
petgraph = "0.6"
serde = { version="1", features = ["derive"] }

eframe = { version="0.27", default-features = false, optional=true}
egui = { version="0.27",optional=true }

# wasm
reqwasm = { version="0.5",optional = true }
log = { version="0.4", optional = true }
wasm-bindgen = { version="0.2",optional = true }
console_error_panic_hook = { version="0.1", optional = true }
wasm-bindgen-futures = { version="0.4",optional=true }
web-sys = { version="0.3",optional=true }
serde_json = { version="1",optional=true }
